--- a/src/app/project-timer.html
+++ b/src/app/project-timer.html
@@ -39,9 +39,9 @@
 			<button mat-raised-button color="primary" (click)='startTimer()'>Start Timer</button>
 			<button mat-raised-button color="accent" (click)='pauseTimer()'>Pause</button>
 
-      <p>{{projectTime.time}} {{getTimeScale(projectTime.timescale)}} selected</p>
-			<p>{{projectTime.timeLeft}} Seconds Left ...</p>
-		  <p>{{projectTime.timeElapsed}} Seconds Elapsed ...</p>
+      <p>{{projectTime.time}} {{getTimeScale(projectTime.timescale)}} Selected</p>
+			<p>{{projectTime.timeLeft}} sec Left ...</p>
+		  <p>{{projectTime.timeElapsed}} sec Elapsed ...</p>
     </div>
 	</mat-card-content>
 
